posiGen_FullsendBox/src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Non_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_Description__c</fullName>
        <label>Summary Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Summary_Description__c</columns>
        <columns>Non_Employee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Positions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>